--- a/source/gopony-exam-ui-student/package.json
+++ b/source/gopony-exam-ui-student/package.json
@@ -28,20 +28,20 @@
 				"vuex": "3.6.0"
 		},
 		"devDependencies": {
-				"@vue/cli-plugin-babel": "4.4.6",
-				"@vue/cli-plugin-eslint": "4.4.6",
-				"@vue/cli-plugin-router": "4.4.6",
-				"@vue/cli-plugin-unit-jest": "4.4.6",
-				"@vue/cli-plugin-vuex": "4.4.6",
-				"@vue/cli-service": "4.4.6",
+				"@vue/cli-plugin-babel": "^4.4.6",
+				"@vue/cli-plugin-eslint": "^4.4.6",
+				"@vue/cli-plugin-router": "^4.4.6",
+				"@vue/cli-plugin-unit-jest": "^4.4.6",
+				"@vue/cli-plugin-vuex": "^4.4.6",
+				"@vue/cli-service": "^4.4.6",
 				"@vue/eslint-config-prettier": "^6.0.0",
 				"@vue/test-utils": "^1.1.3",
-				"babel-eslint": "10.1.0",
-				"babel-plugin-dynamic-import-node": "2.3.3",
+				"babel-eslint": "^10.1.0",
+				"babel-plugin-dynamic-import-node": "^2.3.3",
 				"chalk": "4.1.0",
 				"compression-webpack-plugin": "5.0.2",
 				"connect": "3.6.6",
-				"eslint": "7.15.0",
+				"eslint": "6.8.0",
 				"eslint-plugin-vue": "7.2.0",
 				"lint-staged": "10.5.3",
 				"runjs": "4.4.2",
